[package]
name = "bulletproof_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek-ng = "4.1.1"
bulletproofs = "4.0.0"
merlin = "3.0.0"
subtle = "2.5.0"
zkp = "0.8.0"
rand = "0.8.5"