[package]
name = "bulletproof_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib']

[dependencies]
ws-sdk = "0.1.15"
curve25519-dalek-ng = "4.1.1"
bulletproofs = {version = "4.0.0"}
merlin = "3.0.0"
rand = "0.8.5"

# [package.metclear

[profile.release]
opt-level = 's'

